@@ -1,3 +1,10 @@
+2013-07-25 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/sugar/functions/is_na.h : added is_na for DateVector and
+        DatetimeVector
+        * include/Rcpp/Date.h : added is_na method
+        * include/Rcpp/Datetime.h : added is_na method
+        
 2013-07-24  Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/traits/is_module_object.h: trait class that identifies
